--- a/blogpost.html
+++ b/blogpost.html
@@ -1,9 +1,16 @@
 <html>
-<head>
-    <title>El titulo del post</title>
-</head>
-<body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar
+                    como crear ramas dentro de un proyeccto de git para luego unirlas
+                </p>  
+            </div>
+        </div>
 </body>
 </html>
