--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
                 <h1>Este es el titulo del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar
                     como crear ramas dentro de un proyeccto de git para luego unirlas
-                </p>  
+                </p>
+                <p>Este es un segundo parrafo de prueaba para el proyecto 1</p>
             </div>
         </div>
 </body>
