--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div id="container">
+        <div id="cabecera">
             <div id="post">
                 <h1>Este es el titulo del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar
