--- a/blogpost.html
+++ b/blogpost.html
@@ -4,12 +4,12 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div id="cabecera">
+        <div id="container">
+            <div id="cabecera">
+                Hyperblog <span id="tagline">Tu blog de confianza</span>
+            </div>
             <div id="post">
                 <h1>Este es el titulo del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar
-                    como crear ramas dentro de un proyeccto de git para luego unirlas
-                </p>
             </div>
         </div>
 </body>
