--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar
+                    como crear ramas dentro de un proyeccto de git para luego unirlas
+                </p>  
             </div>
         </div>
 </body>
