--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,14 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de confianza</span>
+                Hyperblog <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar
                     como crear ramas dentro de un proyeccto de git para luego unirlas
-                </p>  
+                </p> 
+                <p>Suscribete y dale like</p>
             </div>
         </div>
 </body>
